# flexplore

./: Cargo.toml  README.md  Trunk.toml  comparison.md  index.html  justfile
.claude/: settings.json
.github/workflows/: pages.yml  swift-golden.yml
crates/flexplore-core/: Cargo.toml
crates/flexplore-core/src/: config.rs
crates/flexplore-core/src/codegen/: bevy.rs  css.rs  dioxus.rs  egui.rs  flutter.rs  gen_tests.rs  iced.rs  react.rs  react_native.rs  snapshot_tests.rs  swiftui.rs
examples/: render_testdata.rs
flexplore/: Cargo.toml  index.html
flexplore-core/: Cargo.toml
flexplore-core/src/: art.rs  config.rs  fixtures.rs  lib.rs  templates.rs
flexplore-protocol/: Cargo.toml
flexplore-protocol/src/: lib.rs
flexplore-server/: Cargo.toml
flexplore-server/src/: main.rs
flexplore/src/: art.rs  config.rs  highlight.rs  history.rs  main.rs  net.rs  panel.rs  persist.rs  render.rs  viz.rs
scripts/: build_overview.py  render_all.ps1  render_all.sh  render_flutter.ps1  render_flutter.sh  render_html.mjs  render_html.ps1  render_html.sh  render_iced.ps1  render_iced.sh  render_swift.ps1  render_swift.sh  render_tailwind.ps1  render_tailwind.sh  view_overview.ps1  view_overview.sh
scripts/iced_golden/: Cargo.toml
scripts/swift_golden/: Package.swift
src/: art.rs  codegen.rs  config.rs  fixtures.rs  history.rs  lib.rs  main.rs  panel.rs  persist.rs  render.rs  templates.rs  viz.rs
src/codegen/: bevy.rs  css.rs  dioxus.rs  egui.rs  flutter.rs  gen_tests.rs  iced.rs  mod.rs  react.rs  react_native.rs  snapshot_tests.rs  swiftui.rs  tailwind.rs
testdata/: overview.html
testdata/align_content_space_between/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/align_items_center/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/align_items_stretch/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/align_self_center/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/all_hidden/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/dark2_palette/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/deep_chain_3/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/direction_column/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/direction_column_reverse/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/direction_row_reverse/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/flex_basis_percent/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/gaps_mixed/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/grid_3col/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/grid_auto_flow_column/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/grid_span/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/grow_shrink/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/hidden_child/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/justify_center/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/justify_space_between/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
testdata/justify_space_evenly/: expected.dart  expected.dioxus.rs  expected.egui.rs  expected.html  expected.iced.rs  expected.jsx  expected.rn.jsx  expected.rs  expected.swift  expected.tailwind.html  input.json
tools/egui-golden/: Cargo.toml
tools/egui-golden/src/: main.rs
tools/iced-golden/: Cargo.toml
tools/iced-golden/src/: main.rs
tools/react-native-golden/: Cargo.toml
tools/react-native-golden/src/: config.rs  main.rs
web/: index.html
(+325 files in other folders)
