[package]
name = "flexplore-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false }
lightyear = { version = "0.26.4", default-features = false, features = [
    "input_native",
    "replication",
] }
flexplore-core = { path = "../flexplore-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
