[package]
name = "flexplore"
version = "1.0.0"
edition = "2024"

[features]
default = ["multiplayer"]
multiplayer = [
    "dep:flexplore-protocol",
    "dep:lightyear",
]

[dependencies]
flexplore-core = { path = "../flexplore-core", features = ["bevy"] }
flexplore-protocol = { path = "../flexplore-protocol", optional = true }
bevy = { version = "0.18", features = ["serialize"] }
bevy_egui = "0.39"
lightyear = { version = "0.26.4", optional = true, features = [
    "client",
    "webtransport",
    "netcode",
    "input_native",
    "replication",
] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
getrandom_0_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
strum = { version = "0.28.0", features = ["derive"] }
anyhow = "1.0.102"
catppuccin = { version = "2", features = ["serde"] }
colorous = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25.10", default-features = false, features = ["png"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6"
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "Document", "Location"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
test-case = "3"
