[package]
name = "flexplore-core"
version = "0.1.0"
edition = "2024"

[features]
bevy = ["dep:bevy"]

[dependencies]
anyhow = "1.0.102"
colorous = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28.0", features = ["derive"] }
bevy = { version = "0.18", optional = true }

[dev-dependencies]
test-case = "3"
