[package]
name = "egui-golden"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
colorous = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
