[package]
name = "iced-golden"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
iced = { version = "0.13", features = ["image", "tokio"] }
colorous = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
